# pyhw

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  implementated.md  implemented.md  pyproject.toml  setup.py  todo.md
.github/: copilot-instructions.md
.github/workflows/: build-and-run.yml
docker/: pyhw.builder.16.04.Dockerfile
docs/: functionality.md  tested_platform.md
scripts/: docker_build_pyhw_builder.sh  docker_local.sh  docker_pypi.sh
src/: logo_test.py  mul_test.py  template.py  test.py  windows_test.py
src/pyhw/: __init__.py  __main__.py  macos.py  pyhwException.py
src/pyhw/backend/: __init__.py  backendBase.py
src/pyhw/backend/cpu/: __init__.py  bsd.py  cpuBase.py  cpuInfo.py  linux.py  macos.py  windows.py
src/pyhw/backend/gpu/: __init__.py  bsd.py  gpuBase.py  gpuInfo.py  linux.py  macos.py  windows.py
src/pyhw/backend/host/: __init__.py  bsd.py  hostBase.py  hostInfo.py  linux.py  macos.py  windows.py
src/pyhw/backend/kernel/: __init__.py  kernelBase.py  kernelInfo.py  linux.py  macos.py  unix.py  windows.py
src/pyhw/backend/memory/: __init__.py  bsd.py  linux.py  macos.py  memoryBase.py  memoryInfo.py  windows.py
src/pyhw/backend/metal/: .gitignore  Makefile  metalGPU.swift  metalGPULib.swift  t.py
src/pyhw/backend/nic/: __init__.py  bsd.py  linux.py  macos.py  nicBase.py  nicInfo.py  (+1 more)
src/pyhw/frontend/: __init__.py  colorConfig.py  colorSet.py  frontendBase.py
src/pyhw/pyhwException/: __init__.py  pyhwException.py
src/pyhw/pyhwUtil/: __init__.py  cliUtil.py  pciUtil.py  pyhwUtil.py  sysctlUtil.py
test/: conftest.py  test_bsd.py  test_cliUtil.py  test_colorConfig.py  test_colorUtil.py  test_cpuBase.py  test_cpuLinux.py  test_cpuMacOS.py  test_cpuWindows.py  test_frontendBase.py  test_gpuBase.py  test_gpuLinux.py  test_gpuMacOS.py  test_gpuWindows.py  test_hostBase.py  test_hostLinux.py  test_hostMacOS.py  test_hostWindows.py  test_kernelBase.py  test_kernelUnix.py  test_kernelWindows.py  test_logoBase.py  test_main.py  test_memoryBase.py  test_memoryLinux.py  test_memoryMacOS.py  test_memoryWindows.py  test_nicBase.py  test_nicLinux.py  test_nicMacOS.py  test_nicWindows.py  test_npuBase.py  test_npuLinux.py  test_npuMacOS.py  test_npuWindows.py  test_osBase.py  test_osLinux.py  test_osMacOS.py  test_osWindows.py  test_pciUtil.py  (+13 more)
(+38 files in other folders)
