[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhw"
version = "0.12.1"
description = "PyHw, a neofetch-like command line tool for fetching system information but written mostly in python."
keywords = ["neofetch", "system information", "command line tool", "python", "hardware information", "fastfetch", "fetching"]
authors = [
    {name = "Xiao Ran"}
]
maintainers = [
    {name = "Xiao Ran", email="xiaoran.007@icloud.com"},
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
dependencies = [
    "pypci-ng>=0.2.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
urls = {homepage = "https://github.com/xiaoran007/pyhw"}

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pyhw" = ["frontend/logo/ascii/*.pyhw", "library/lib/*.dylib"]

[project.scripts]
pyhw = "pyhw.__main__:main"
