[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhw"
version = "0.14.5"
description = "PyHw, a neofetch-like command line tool for fetching system information but written mostly in python."
keywords = ["neofetch", "system information", "command line tool", "python", "hardware information", "fastfetch", "fetching"]
authors = [
    {name = "Xiao Ran"}
]
maintainers = [
    {name = "Xiao Ran", email="xiaoran.007@icloud.com"},
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "pypci-ng>=0.2.6"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = {homepage = "https://github.com/xiaoran007/pyhw"}

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pyhw" = ["frontend/logo/ascii/*.pyhw", "library/lib/*.dylib", "library/lib/*.so"]

[project.scripts]
pyhw = "pyhw.__main__:main"
